[package]
name = "geoserver_to_pma"
version = "0.1.0"
edition = "2021"
author = "Luis Molon"
description = "Simple program to convert GeoServer JSON files into PMA databases"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde =  { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
encoding_rs = "0.8.31"